Text positioning The logo is centered now, it took way too long for that realization, of course flexbox needs a container.  Now for the text I just need to move it to the bottom so I am trying to use flexbox to do so and I corrected the the img links to declutter the page

--- a/Crystalspire-project/Crystalspire.css
+++ b/Crystalspire-project/Crystalspire.css
@@ -107,13 +107,7 @@ body {
   width: 50%;
   z-index: 9999;
   position: relative;
-  /*   Why didnt flexbox work here?  Because of text-wrapper flexbox?  Hypothesis: I have been using these styles on the logo and not the container
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  */
-}
-/*testing hypothesis here*/
+
 .logo-wrapper {
   display: flex;
   justify-content: center;
@@ -125,7 +119,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: flex-end;
+  align-items: baseline;
   text-align: center;
   height: 100%;
   padding-left: 100px;
